--- a/css/style.css
+++ b/css/style.css
@@ -129,21 +129,30 @@ img {
  ************************************************/
 /*tablet first*/
 @media screen and (max-width: 768px) {
-    .steps{
-        width: fit-content;
+    .container{
+        width: 100%;
     }
 }
 /*mobile*/
 @media screen and (max-width:480px){
-    .text-center{
-        width: 480px;
-    }
-    .container{
-        width: 480px;
-    }
-    .row{
+    
+    .row {
         flex-direction: column;
-        align-items: center;
+    }
+    .why-us .col, .steps .col, .lessons .col{
+        width: 100%;
+        margin-bottom: 80px;
+    }
+    .why-us .col:last-child, .steps .col:last-child, .lessons .col:last-child{
+        margin-bottom: 0px;
+    }
+    .why-us{
+        background-color: black;
+        margin-bottom: 0px;
+        padding: 3rem 0;
+    }
+    .steps{
+        margin-bottom: 0px;
     }
 }
 
